--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,16 @@ __pycache__/
 *.py[cod]
 *$py.class
 
+# Ignore all files in the data folder
+DATA/
+
+# Ignore all .csv files
+*.csv
+
+# Ignore all .txt files
+*.txt
+
+
 # C extensions
 *.so
 
