--- a/.gitignore
+++ b/.gitignore
@@ -3,14 +3,8 @@ __pycache__/
 *.py[cod]
 *$py.class
 
-# Ignore all files in the data folder
-DATA/
-
 # Ignore all .csv files
 *.csv
-
-# Ignore all .csv files
-*.json
 
 # Ignore all .txt files
 *.txt
@@ -173,6 +167,13 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
-plots/
-DATA/Video_Games.jsonl
-DATA/Video_Games_5.json
+# Ignore the entire DATA folder
+DATA/
+
+# Ignore all .jsonl files in the repository
+*.jsonl
+
+# Ignore specific file types within DATA/
+DATA/*.csv
+DATA/*.json
+
